EPUB/Snapshot: Fix invisible annotations in Chrome
Should no longer need the arXiv.org fixes from 669ba6f because we're
putting the annotation SVG in a shadow root now.

Fixes #134

--- a/src/dom/common/stylesheets/inject.scss
+++ b/src/dom/common/stylesheets/inject.scss
@@ -3,9 +3,9 @@
 	pointer-events: none;
 	position: absolute;
 	left: 0;
+	right: 0;
 	top: 0;
-	width: 0;
-	height: 0;
+	bottom: 0;
 	background: transparent;
 	overflow: visible;
 }
